--- a/Encriptador/index.html
+++ b/Encriptador/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>Alura - Encriptador</title>
   </head>
   <body>
@@ -16,8 +18,6 @@
         <main> 
           <form>
             <h1>Encriptador de texto</h1>
-            <textarea  id="mensaje" class="mensaje" placeholder="Ingrese el texto aqui." required></textarea>
-            <br/>
             <div id="botones">
               <button type="button" value="Encriptar" class="boton" onclick="encriptar()"/> 
                 Encriptar <span class="material-symbols-outlined">enhanced_encryption</span>
@@ -29,6 +29,8 @@
                 Borrar <span class="material-symbols-outlined">delete</span>
               </button>
             </div>
+            <textarea  id="mensaje" class="mensaje" placeholder="Ingrese el texto aqui." required></textarea>
+            <br/>
           </form>
           <span id="aviso" class="oculto"></span>
           <div id="texto-oculto" class="oculto">
@@ -38,7 +40,7 @@
         </main>
         
         <footer>         
-          <p>JASA</p>
+          <p>Desafio de Alura One G6- Encriptador de texto</p>
         </footer>
       
     </div>
